took out picture

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -40,6 +40,10 @@ ul, ol, dl, figure,
 /**
  * Images
  */
+img.project_pic{
+  width: 30em;
+  height: 30em;
+}
 img {
     max-width: 100%;
     vertical-align: middle;
