--- a/css/main.scss
+++ b/css/main.scss
@@ -3,10 +3,26 @@
 ---
 @charset "utf-8";
 
+// My Styles
+
+.site-title {
+  font-family: 'Alegreya SC', serif;
+  font-size: 2em;
+}
+h1 {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+.profile_pic{
+  width: 10em;
+  height: 5em;
+  border-radius: 50%;
+}
+
+
 
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: 'Roboto', Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
