--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,17 +2,16 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
-
+    // border-top: 5px solid $grey-color-dark;
+    // border-bottom: 1px solid $grey-color-light;
+    min-height: 70px;
     // Positioning context for the mobile navigation icon
     position: relative;
 }
 
 .site-title {
     font-size: 42px;
-    line-height: 56px;
+    line-height: 70px;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
@@ -25,7 +24,7 @@
 
 .site-nav {
     float: right;
-    line-height: 56px;
+    line-height: 70px;
 
     .menu-icon {
         display: none;
@@ -92,7 +91,7 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
+    // border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
 
