--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,6 +5,7 @@
     // border-top: 5px solid $grey-color-dark;
     // border-bottom: 1px solid $grey-color-light;
     min-height: 70px;
+    background-color: rgba(0,0,0,.1);
     // Positioning context for the mobile navigation icon
     position: relative;
 }
