--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ div.section-main{
   background-size: contain;
 }
 div.section-main-layer{
-  background-color: rgba(0,0,0,.1);
+  background-color: rgba(101,190,180,.9);
   width: inherit;
   height:inherit;
 }
@@ -76,9 +76,35 @@ div.section-meet a{
 
 *************************************************/
 div.about-header{
-  
+  height: 5em;
+  line-height: 5em;
+  border-bottom: 1px solid rgba(0,0,0,.1);
+}
+div.about-header h2{
+  padding-left: 2em;
+  font-size: 2em;
 }
 div.clark-kent img{
   display: block;
-  margin: 0 auto;
+  margin: 2em auto 1em;
+}
+div.about-main{
+  width:100%;
+  height: 500px;
+  display: flex;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-user-select: center;
+  -moz-user-select: center;
+  -ms-user-select: center;
+  -o-user-select: center;
+  user-select: center;
+}
+div.about-main-left ul{
+  width: 30%;
+  text-align: right;
+  list-style-type: none;
+}
+div.about-main-right{
+  width: 50%;
 }
