--- a/css/index.css
+++ b/css/index.css
@@ -83,28 +83,39 @@ div.about-header{
 div.about-header h2{
   padding-left: 2em;
   font-size: 2em;
+  font-weight: 300;
 }
 div.clark-kent img{
   display: block;
   margin: 2em auto 1em;
 }
+h3.clark-kent{
+  font-size: 2em;
+  padding-left: 2em;
+}
 div.about-main{
   width:100%;
-  height: 500px;
-  display: flex;
-  -ms-align-items: center;
-  align-items: center;
-  -webkit-user-select: center;
-  -moz-user-select: center;
-  -ms-user-select: center;
-  -o-user-select: center;
-  user-select: center;
+  height: 350px;
 }
 div.about-main-left ul{
-  width: 30%;
   text-align: right;
   list-style-type: none;
+  color: rgba(130,130,130,.7);
+  text-transform: uppercase;;
+}
+div.about-main-right p{
+  font-family: Garamond, Palatino serif;
+}
+div.about-main-left{
+  width: 30%;
 }
 div.about-main-right{
-  width: 50%;
+  width: 60%;
+  vertical-align: top;
+  padding-left: 1em;
+}
+div.about-main-right,
+div.about-main-left{
+  display: inline-block;
+  margin: 0 auto;
 }
