--- a/css/main.scss
+++ b/css/main.scss
@@ -22,7 +22,7 @@ h1 {
 
 
 // Our variables
-$base-font-family: 'Roboto', Helvetica, Arial, sans-serif;
+$base-font-family: Garamond, Palatino serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
