--- a/css/resume.css
+++ b/css/resume.css
@@ -1,34 +1,41 @@
-.resume_wrapper{
-  position: relative;
+/***********************************************
+
+                    RESUME WEB
+
+*************************************************/
+
+div.resume-wrapper{
+  width: 80%;
+  margin: 2em auto;
 }
-.resume_wrapper > div > p, .resume_wrapper > div > ul{
-  font-size: .875em;
-  text-shadow: 0 1px 1px hsla(0,0% 100%, .8);
-}
-.resume_wrapper .skills{
-  float: left;
-  width:49%;
-}
-.resume_wrapper .skills > h3{
-  margin-bottom: .2em;
-}
-.resume_wrapper .experience{
-  float:right;
-  width:49%;
-}
-.resume_wrapper .experience h3:first-of-type{
-  margin-bottom: .2em;
-}
-.resume_wrapper > div > h2{
-  font-size: 1.15em;
-}
-.resume_wrapper > div > h3{
-  margin-bottom: 0em;
+div.resume-wrapper h2{
+  text-align: center;
   font-size: 1em;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  margin: 1em 0;
 }
-.resume_wrapper > div > h4{
-  margin-bottom: .2em;
+div.resume-wrapper ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
-.resume_wrapper > div > .title{
-  font-size: .75em;
+li.li-skills{
+  position: relative;
+  margin: 2em 0;
+}
+li.li-skills aside{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 70%;
+}
+div.objective,
+div.skills,
+div.experience,
+div.education,
+div.web-experience,
+div.work-experience
+{
+  border-bottom: 1px solid black;
 }
