--- a/css/resume.css
+++ b/css/resume.css
@@ -3,17 +3,20 @@
                     RESUME WEB
 
 *************************************************/
-
 div.resume-wrapper{
-  width: 80%;
+  width: 70%;
   margin: 2em auto;
 }
 div.resume-wrapper h2{
   text-align: center;
   font-size: 1em;
-  font-family: Helvetica, Arial, sans-serif;
   font-weight: 300;
   margin: 1em 0;
+}
+div.resume-wrapper h2,
+h3{
+  font-size: 1em;
+  font-family: Helvetica, Arial, sans-serif;
 }
 div.resume-wrapper ul{
   list-style-type: none;
@@ -22,13 +25,26 @@ div.resume-wrapper ul{
 }
 li.li-skills{
   position: relative;
-  margin: 2em 0;
+  margin: 2.5em 0;
 }
 li.li-skills aside{
   position: absolute;
   top: 0;
   right: 0;
   width: 70%;
+}
+li.work-exp-li{
+  margin: 1em 0;
+}
+li.work-exp-li p:first-of-type{
+  font-size: .8em;
+  font-weight: 700;
+  font-family: Helvetica, Arial, sans-serif;
+}
+li.work-exp-li > p,
+li.work-exp-li > h3{
+  font-size: 1em;
+  margin: 0;
 }
 div.objective,
 div.skills,
