--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,11 +93,11 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: $brand-color;
+    color: rgba(0,0,0,.7);
     text-decoration: none;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        color: rgba(0,0,0,.7);
     }
 
     &:hover {
