--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,7 +4,7 @@
 .site-header {
     // border-top: 5px solid $grey-color-dark;
     // border-bottom: 1px solid $grey-color-light;
-    min-height: 70px;
+    height: 100px;
     background-color: $grey-color-light;
     // Positioning context for the mobile navigation icon
     position: relative;
@@ -12,7 +12,7 @@
 
 .site-title {
     font-size: 42px;
-    line-height: 70px;
+    line-height: 100px;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
@@ -25,7 +25,7 @@
 
 .site-nav {
     float: right;
-    line-height: 70px;
+    line-height: 100px;
 
     .menu-icon {
         display: none;
