--- a/css/index.css
+++ b/css/index.css
@@ -6,18 +6,27 @@
 
 div.section-main{
   width: 100%;
-  height: 500px;
-  background-color: $grey-color-light;
-  background-image: url('../images/wCloud.jpg');
+  min-height: 400px;
+  text-align: center;
+  /*background-image: url('../images/wCloud.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: contain;*/
+}
+div.section-main img{
+  margin-top: 7em;
+}
+#tagline{
+  color: #fff;
+  font-size: 3em;
+  padding-bottom: 2.5em;
 }
 div.section-main-layer{
   background-color: rgba(101,190,180,.6);
   width: inherit;
   height:inherit;
 }
+/********************ACTION********************/
 div.section-action{
   width: 100%;
   height: 200px;
@@ -29,43 +38,45 @@ div.section-action{
   -ms-user-select: center;
   -o-user-select: center;
   user-select: center;
-  margin: 0;
 }
 div.section-action-child-left,
 div.section-action-child-right{
-  width: 40%;
-  height: 6em;
-  background-color: rgba(0,0,0,.2);
+  font-weight: 500;
+  letter-spacing: 1px;
+  width: 50%;
   margin: 0 auto;
   text-align: center;
 }
 div.section-action a{
-  display: inline-block;;
-  margin-top: 1em;
-  font-size: 24px;
+  font-size: 3em;
 }
-
+/********************MEET********************/
 div.section-meet{
   width: 100%;
-  height: 500px;
   background-image: url('../images/cpu.jpg');
   background-size: 15em 15em;
   margin: 0;
   text-align: center;
 }
+div.section-meet-layer a{
+  display: block;
+}
 div.section-meet-layer{
-  overflow: auto;
   width: inherit;
   height: inherit;
   background-color: rgba(101,190,180,.9);
 }
+div.section-meet img{
+  margin-top: 2em;
+}
 div.section-meet p{
   font-size: 2em;
   color: #fff;
-  margin: 3em auto 1em;
+  margin: 1em auto;
   width: 70%;
 }
 div.section-meet a{
+  padding-bottom: 2em;
   font-size: 1.5em;
 }
 
@@ -85,22 +96,68 @@ div.about-header h2{
   font-size: 2em;
   font-weight: 300;
 }
-div.clark-kent{
-  width: 20em;
-  height: 20em;
-  margin: 3em auto;
+
+/********************PICTURE********************/
+
+#about-pic{
+  z-index: 99;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  margin: 2em auto;
+  cursor: pointer;
+  box-shadow: 0 0 5px #4D392E;
+  -webkit-perspective: 800px;
+  -moz-perspective: 800px;
+  perspective: 800px;
+  transition:-webkit-transform 1s ease-in-out;
+  transition:-moz-transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;
+  -webkit-perspective-origin: 50% 0%; /*center top, default value - how it will rotate*/
+  -moz-perspective-origin: 50% 0%;
+  perspective-origin: 50% 0%;
+  -webkit-transform-style: preserve-3d; /*passing along its 3d     perspective to its children*/
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
-div.clark-kent img{
-  max-width: 100%;
-  height: inherit;
+section#about-pic div{
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
+section#about-pic div.clark-kent{
+  background: url("../images/clark-kent-mod.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-transform: rotateY( -180deg );  /* Upends backPiece, so when flips back over, its rightside up */
+  -moz-transform: rotateY( -180deg );
+  transform: rotateY( -180deg );
+}
+section#about-pic div.ryan-kahle{
+  z-index: 100;
+  background-image: url("../images/ryan.jpg");
+  background-size: cover;
+}
+.flip{
+   -webkit-transform: rotateY( 180deg );  /* Flips the about-pic */
+   -moz-transform: rotateY( 180deg );
+   transform: rotateY( 180deg );
+}
+
+/********************MAIN********************/
+
 h3.clark-kent{
   font-size: 2em;
   text-align: center;
 }
 div.about-main{
   width:100%;
-  height: 350px;
 }
 div.about-main-left ul{
   text-align: right;
@@ -109,10 +166,10 @@ div.about-main-left ul{
   text-transform: uppercase;;
 }
 div.about-main-left{
-  width: 30%;
+  width: 35%;
 }
 div.about-main-right{
-  width: 60%;
+  width: 55%;
   vertical-align: top;
   padding-left: 1em;
 }
@@ -140,15 +197,6 @@ div.project{
   margin: 1em;
   display: inline-block;
   flex: 1;
-  position: relative;
-}
-h3{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  color: #fff;
-  font-size: 2em;
-  display: none;
 }
 div.project a img:hover{
   opacity: .6;
@@ -159,14 +207,16 @@ div.project a img:hover{
                     MEDIA QUERIRES
 
 *************************************************/
-/*@media (max-width: 900px){
-  div.project: .5em 0;
-}*/
 @media (max-width: 800px){
   div.about-row{
     flex-direction: column;
   }
   div.project{
     margin: 2em auto;
+  }
+}
+@media (max-width: 600px){
+  h3.clark-kent{
+    display: none;
   }
 }
