--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<div class="about-header">
+<!-- <div class="about-header">
   <h2>{{ page.title }}</h2>
-</div>
+</div> -->
 
 
 
