--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,7 +5,7 @@
     // border-top: 5px solid $grey-color-dark;
     // border-bottom: 1px solid $grey-color-light;
     height: 100px;
-    background-color: $grey-color-light;
+    background-color: #f5f5f5;
     // Positioning context for the mobile navigation icon
     position: relative;
 }
@@ -97,7 +97,7 @@
 .site-footer {
     // border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
-    background-color: rgba(130,130,130,.5);
+    background-color: darken(#f5f5f5, 10%);
     color: #fff;
 }
 .site-footer a{
