updated logo & content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/"><img  src="../images/logo-w-opacity.png"/></a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img  src="../images/logo-header.png"/></a>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
