--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,11 +15,11 @@
     line-height: 100px;
     letter-spacing: -1px;
     margin-bottom: 0;
-    float: left;
+    // float: left;
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: rgba(0,0,0,.5);
     }
 }
 
@@ -28,14 +28,14 @@
     line-height: 100px;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 500;
-    color: $grey-color-dark;
+    color: rgba(0,0,0,.5);
 
     .menu-icon {
         display: none;
     }
 
     .page-link {
-        color: $text-color;
+        color: rgba(0,0,0,.5);
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
