--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ div.section-main{
   text-align: center;
 }
 div.section-main img{
-  margin-top: 7em;
+  margin: 5em 0 3em;
 }
 #tagline{
   color: #fff;
