--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -3,30 +3,31 @@
                     RESUME WEB
 
 *************************************************/
+$title-font: Helvetica, Arial, sans-serif;
+
 div.resume-wrapper{
   width: 70%;
   margin: 2em auto;
-}
-div.resume-wrapper h2{
-  text-align: center;
-  font-size: 1em;
-  font-weight: 300;
-  margin: 1em 0;
+  h2{
+    text-align: center;
+    font-size: 1em;
+    font-weight: 300;
+    margin: 1em 0;
+  }
+  h3{
+    text-decoration: underline;
+  }
+  ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
 }
 div.resume-wrapper h2,
 h3{
   font-size: 1em;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: $title-font;
 }
-div.resume-wrapper h3{
-  text-decoration: underline;
-}
-div.resume-wrapper ul{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
 /*************   SKILLS  *****************/
 
 div.skills ul li:first-of-type{
@@ -52,10 +53,9 @@ li.education-li{
 li.work-exp-li p.title{
   font-size: .8em;
   font-weight: 600;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: $title-font;
   margin-bottom: .75em;
 }
-
 li.work-exp-li > p,
 li.work-exp-li > h3,
  li.education-li > h3{
@@ -89,7 +89,6 @@ div.work-experience
     margin: .25em 0;
   }
 }
-
 @media (max-width: 960px){
   div.skills,
   .resume-wrapper h3,
