--- a/css/main.scss
+++ b/css/main.scss
@@ -64,5 +64,7 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "resume",
+        "styles"
 ;
