--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,15 +4,15 @@
 .site-header {
     // border-top: 5px solid $grey-color-dark;
     // border-bottom: 1px solid $grey-color-light;
-    height: 100px;
+    height:   $base-line-height*5;
     background-color: #f5f5f5;
     // Positioning context for the mobile navigation icon
     position: relative;
 }
 
 .site-title {
-    font-size: 42px;
-    line-height: 100px;
+    font-size: 1.333rem;
+    line-height: $base-line-height*5;
     letter-spacing: -1px;
     margin-bottom: 0;
     // float: left;
@@ -25,7 +25,7 @@
 
 .site-nav {
     float: right;
-    line-height: 100px;
+    line-height: $base-line-height*5;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 500;
     color: rgba(0,0,0,.5);
