--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -6,11 +6,11 @@
 $title-font: Helvetica, Arial, sans-serif;
 
 div.resume-wrapper{
+  @include type-setting(0);
   width: 70%;
   margin: 2em auto;
   h2{
     text-align: center;
-    font-size: 1em;
     font-weight: 300;
     margin: 1em 0;
   }
@@ -25,7 +25,7 @@ div.resume-wrapper{
 }
 div.resume-wrapper h2,
 h3{
-  font-size: 1em;
+  @include type-setting(0);
   font-family: $title-font;
 }
 /*************   SKILLS  *****************/
@@ -51,7 +51,7 @@ li.education-li{
   margin: 1em 0;
 }
 li.work-exp-li p.title{
-  font-size: .8em;
+  @include type-setting(-1);
   font-weight: 600;
   font-family: $title-font;
   margin-bottom: .75em;
@@ -59,7 +59,7 @@ li.work-exp-li p.title{
 li.work-exp-li > p,
 li.work-exp-li > h3,
  li.education-li > h3{
-  font-size: 1em;
+  @include type-setting(0);
   margin: 0;
 }
 
@@ -89,6 +89,7 @@ div.work-experience
     margin: .25em 0;
   }
 }
+
 @media (max-width: 960px){
   div.skills,
   .resume-wrapper h3,
