--- a/css/main.scss
+++ b/css/main.scss
@@ -43,7 +43,50 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+/**
+ * My Veritical Rhythm
+ */
 
+$base-font-size: 1rem;
+$base-line-height: 1.25 * $base-font-size;
+
+$type-settings: (
+  -1: (
+    font-size: 0.75rem,
+    line-height: $base-line-height
+  ),
+  0: (
+    font-size: 1rem,
+    line-height: $base-line-height
+  ),
+  1: (
+    font-size: 1.333rem,
+    line-height: $base-line-height * 2
+  ),
+  2: (
+    font-size: 1.778rem,
+    line-height: $base-line-height * 2
+  ),
+  3: (
+    font-size: 2.369rem,
+    line-height: $base-line-height * 2
+  )
+);
+
+@function type-scale($level) {
+  @return map-get(
+    map-get($type-settings, $level), 'font-size');
+}
+
+@function line-height($level) {
+  @return map-get(
+    map-get($type-settings, $level), 'line-height');
+}
+
+@mixin type-setting($level) {
+  font-size: type-scale($level);
+  line-height: line-height($level);
+}
 
 // Using media queries with like this:
 // @include media-query($on-palm) {
