--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,14 @@
   {% include head.html %}
 
   <body>
+    <div class='page-wrapper'>
 
-    {% include header.html %}
-
-
-        {{ content }}
+      {% include header.html %}
 
 
+          {{ content }}
+
+    </div>
     {% include footer.html %}
 
   </body>
