--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,41 +1,40 @@
 /**
  * Site header
  */
+
 .site-header {
-    // border-top: 5px solid $grey-color-dark;
-    // border-bottom: 1px solid $grey-color-light;
-    height:   $base-line-height*5;
-    background-color: #f5f5f5;
-    // Positioning context for the mobile navigation icon
-    position: relative;
+    height:   $base-line-height*3;
+    background-color: rgba(63, 102, 135, 0.63);
+    box-shadow: 0.5px 0.5px 0.5px rgba(0,0,0,.5);
+    width: 100%;
 }
 
 .site-title {
     font-size: 1.333rem;
-    line-height: $base-line-height*5;
+    line-height: $base-line-height*3;
     letter-spacing: -1px;
     margin-bottom: 0;
     // float: left;
 
     &,
     &:visited {
-        color: rgba(0,0,0,.5);
+        color: #fff;
     }
 }
 
 .site-nav {
     float: right;
-    line-height: $base-line-height*5;
+    line-height: $base-line-height*3;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 500;
-    color: rgba(0,0,0,.5);
+    color: #fff;
 
     .menu-icon {
         display: none;
     }
 
     .page-link {
-        color: rgba(0,0,0,.5);
+        color: #fff;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
@@ -95,10 +94,12 @@
  * Site footer
  */
 .site-footer {
-    // border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
-    background-color: darken(#f5f5f5, 10%);
-    color: #fff;
+  height: 75px;
+  padding: $spacing-unit 0;
+  background-color: #333232;
+  background-image: url('/images/black-texture-bg.svg');
+  background-repeat: repeat;
+  color: #fff;
 }
 .site-footer a{
   color: #fff;
@@ -163,6 +164,20 @@
     }
 }
 
+
+/**
+ * Wrapper
+ */
+body > div.page-wrapper{
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -75px;
+}
+body > div.page-wrapper:after{
+  content: "";
+  display: block;
+  height: 75px;
+}
 
 
 /**
