--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@
 .site-title {
   font-family: 'Alegreya SC', serif;
   font-size: 2em;
+  color: #fff;
 }
 h1 {
   font-family: 'Roboto Condensed', sans-serif;
@@ -18,7 +19,9 @@ h1 {
   border-radius: 50%;
 }
 
-
+html,body{
+  height: 100%;
+}
 
 
 // Our variables
