adds overlay and text to hover on projects

--- a/css/main.scss
+++ b/css/main.scss
@@ -111,6 +111,7 @@ $type-settings: (
         "base",
         "layout",
         "syntax-highlighting",
+        "portfolio",
         "resume",
         "styles"
 ;
