adds hover effects to page-links

--- a/css/main.scss
+++ b/css/main.scss
@@ -112,6 +112,7 @@ $type-settings: (
         "layout",
         "syntax-highlighting",
         "portfolio",
+        "about",
         "resume",
         "styles"
 ;
