--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -20,6 +20,8 @@ div.section-main{
   color: #000;
 }
 div.section-main-layer{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-height: 600px;
   background:
@@ -29,9 +31,14 @@ div.section-main-layer{
   url('../images/alps.jpg'));
   background:
       /* top, transparent, faked with gradient */
-  -o-linear-gradient(#2e2e2e, rgba(63, 102, 135, 0.63),
-  /* bottom, image */
-  url('../images/alps.jpg'));
+  -webkit-linear-gradient(#2e2e2e, rgba(63, 102, 135, 0.63)),
+      /* bottom, image */
+  url('../images/alps.jpg');
+  background:
+      /* top, transparent, faked with gradient */
+  -webkit-linear-gradient(#2e2e2e, rgba(63, 102, 135, 0.63)),
+      /* bottom, image */
+  url('../images/alps.jpg');
   background:
       /* top, transparent, faked with gradient */
   linear-gradient(#2e2e2e, rgba(63, 102, 135, 0.63)),
@@ -44,7 +51,9 @@ div.main-display{
   width: 70%;
   margin: 7em auto;
   color: white;
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 div.main-display > h1{
   font-size: 3em;
@@ -67,12 +76,10 @@ div.section-action{
   width: 100%;
   height: 200px;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -ms-align-items: center;
   -webkit-box-align: center;
-  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-user-select: center;
@@ -119,93 +126,50 @@ div.section-meet-layer{
 }
 /***********************************************
 
-                    ABOUT
+                    HEADER LINKS
 
 *************************************************/
-div.about-header{
-  height: 5em;
-  line-height: 5em;
-  border-bottom: 1px solid rgba(0,0,0,.1);
-  h2{
-    padding-left: 2em;
-  @include type-setting(2);
-    font-weight: 300;
 
-  }
-}
-/********************PICTURE********************/
-
-#about-pic{
-  position: relative;
-  width: 300px;
-  height: 300px;
-  margin: 2em auto;
-  cursor: pointer;
-  box-shadow: 0 0 5px #4D392E;
-  -webkit-perspective: 800px;
-  perspective: 800px;
-  transition:-webkit-transform 1s ease-in-out;
-  -webkit-transition: -webkit-transform 1s ease-in-out;
-  transition: transform 1s ease-in-out;
-  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
-  -webkit-perspective-origin: 50% 0%; /*center top, default value - how it will rotate*/
-  perspective-origin: 50% 0%;
-  -webkit-transform-style: preserve-3d; /*passing along its 3d     perspective to its children*/
-  transform-style: preserve-3d;
-  div{
-    position: absolute;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  div.clark-kent{
-    background: url("../images/clark-kent-mod.png");
-    background-size: cover;
-    -webkit-transform: rotateY( -180deg );  /* Upends backPiece, so when flips back over, its rightside up */
-    transform: rotateY( -180deg );
-  }
-  div.ryan-kahle{
-    z-index: 100;
-    background-image: url("../images/ryan.jpg");
-    background-size: cover;
-  }
-}
-.flip{
-   -webkit-transform: rotateY( 180deg );  /* Flips the about-pic */
-   transform: rotateY( 180deg );
-}
-
-/********************MAIN********************/
-
-h3.clark-kent{
-  @include type-setting(2);
-  text-align: center;
-}
-div.about-main{
-  width:100%;
-}
-div.about-main-left{
-  width: 35%;
-  ul{
-    text-align: right;
-    list-style-type: none;
-    color: rgba(130,130,130,.7);
-    text-transform: uppercase;
-  }
-}
-div.about-main-right{
-  width: 55%;
-  vertical-align: top;
-  padding-left: 1em;
-}
-div.about-main-right,
-div.about-main-left{
+a.border-center-hover {
+  padding-bottom: 5px;
   display: inline-block;
-  margin: 0 auto;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+          transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  position: relative;
+  overflow: hidden;
 }
+
+a.border-center-hover:hover {
+  color: rgba(0,0,0,0.2)
+}
+
+a.border-center-hover:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  background: rgba(0,0,0,0.2);
+  height: 1.5px;
+  -webkit-transition-property: left right;
+  transition-property: left right;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+          transition-timing-function: ease-out;
+}
+
+a.border-center-hover:hover:before,
+a.border-center-hover:focus:before,
+a.border-center-hover:active:before {
+  left: 0;
+  right: 0;
+}
+
+
 /***********************************************
 
                     MEDIA QUERIRES
@@ -215,7 +179,6 @@ div.about-main-left{
   div.about-row{
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
