--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -75,7 +75,7 @@ div.main-display > h3{
 }
 
 a.learn_more {
-  color: slategrey;
+  color: : rgba(0,0,0,.4);
   margin-top: 1em;
   font-size: 1.5em;
   position: relative;
