--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -3,87 +3,97 @@
                     ABOUT
 
 *************************************************/
-div.about-header{
-  height: 5em;
-  line-height: 5em;
-  border-bottom: 1px solid rgba(0,0,0,.1);
-  h2{
-    padding-left: 2em;
-  @include type-setting(2);
-    font-weight: 300;
+div.about-header {
+    height: 5em;
+    line-height: 5em;
+    border-bottom: 1px solid rgba(0,0,0,.1);
 
-  }
+    h2 {
+        padding-left: 2em;
+        @include type-setting(2);
+        font-weight: 300;
+    }
 }
 /********************PICTURE********************/
+#about-pic {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    margin: 2em auto;
+    cursor: pointer;
+    box-shadow: 0 0 5px #4D392E;
+    -webkit-perspective: 800px;
+    perspective: 800px;
+    transition: -webkit-transform 1s ease-in-out;
+    -webkit-transition: -webkit-transform 1s ease-in-out;
+    transition: transform 1s ease-in-out;
+    transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
+    -webkit-perspective-origin: 50% 0;
+    /*center top, default value - how it will rotate*/
+    perspective-origin: 50% 0;
+    -webkit-transform-style: preserve-3d;
+    /*passing along its 3d     perspective to its children*/
+    transform-style: preserve-3d;
 
-#about-pic{
-  position: relative;
-  width: 300px;
-  height: 300px;
-  margin: 2em auto;
-  cursor: pointer;
-  box-shadow: 0 0 5px #4D392E;
-  -webkit-perspective: 800px;
-  perspective: 800px;
-  transition:-webkit-transform 1s ease-in-out;
-  -webkit-transition: -webkit-transform 1s ease-in-out;
-  transition: transform 1s ease-in-out;
-  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
-  -webkit-perspective-origin: 50% 0%; /*center top, default value - how it will rotate*/
-  perspective-origin: 50% 0%;
-  -webkit-transform-style: preserve-3d; /*passing along its 3d     perspective to its children*/
-  transform-style: preserve-3d;
-  div{
-    position: absolute;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  div.clark-kent{
-    background: url("../images/clark-kent-mod.png");
-    background-size: cover;
-    -webkit-transform: rotateY( -180deg );  /* Upends backPiece, so when flips back over, its rightside up */
-    transform: rotateY( -180deg );
-  }
-  div.ryan-kahle{
-    z-index: 100;
-    background-image: url("../images/ryan.jpg");
-    background-size: cover;
-  }
-}
-.flip{
-   -webkit-transform: rotateY( 180deg );  /* Flips the about-pic */
-   transform: rotateY( 180deg );
+    div {
+        position: absolute;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 100%;
+        height: 100%;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+    }
+
+    div.clark-kent {
+        background: url("../images/clark-kent-mod.png");
+        background-size: cover;
+        -webkit-transform: rotateY( -180deg );
+        /* Upends backPiece, so when flips back over, its rightside up */
+        transform: rotateY( -180deg );
+    }
+
+    div.ryan-kahle {
+        z-index: 100;
+        background-image: url("../images/ryan.jpg");
+        background-size: cover;
+    }
 }
 
+.flip {
+    -webkit-transform: rotateY( 180deg );
+    /* Flips the about-pic */
+    transform: rotateY( 180deg );
+}
 /********************MAIN********************/
+h3.clark-kent {
+    @include type-setting(2);
+    text-align: center;
+}
 
-h3.clark-kent{
-  @include type-setting(2);
-  text-align: center;
+div.about-main {
+    width: 100%;
 }
-div.about-main{
-  width:100%;
+
+div.about-main-left {
+    width: 35%;
+
+    ul {
+        text-align: right;
+        list-style-type: none;
+        color: rgba(130,130,130,.7);
+        text-transform: uppercase;
+    }
 }
-div.about-main-left{
-  width: 35%;
-  ul{
-    text-align: right;
-    list-style-type: none;
-    color: rgba(130,130,130,.7);
-    text-transform: uppercase;
-  }
+
+div.about-main-right {
+    width: 55%;
+    vertical-align: top;
+    padding-left: 1em;
 }
-div.about-main-right{
-  width: 55%;
-  vertical-align: top;
-  padding-left: 1em;
-}
-div.about-main-right,
-div.about-main-left{
-  display: inline-block;
-  margin: 0 auto;
+
+div.about-main-left,
+div.about-main-right {
+    display: inline-block;
+    margin: 0 auto;
 }
