--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,9 +1,23 @@
 /**
  * Reset some basic elements
  */
-*, body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
+*,
+blockquote,
+body,
+dd,
+dl,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+ol,
+p,
+pre,
+ul {
     margin: 0;
     padding: 0;
 }
@@ -22,19 +36,30 @@ body {
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure,
-%vertical-rhythm {
+%vertical-rhythm,
+blockquote,
+dl,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ol,
+p,
+pre,
+ul {
     margin-bottom: $spacing-unit / 2;
 }
 /**
  * Images
  */
-img.project_pic{
-  width: 30em;
-  height: 30em;
+img.project_pic {
+    width: 30em;
+    height: 30em;
 }
+
 img {
     max-width: 100%;
     vertical-align: middle;
@@ -45,25 +70,33 @@ img {
 figure > img {
     display: block;
 }
+
 figcaption {
     font-size: $small-font-size;
 }
 /**
  * Lists
  */
-ul, ol {
+ol,
+ul {
     margin-left: $spacing-unit;
 }
+
 li {
-    > ul,
-    > ol {
-         margin-bottom: 0;
+     > ol,
+    > ul {
+        margin-bottom: 0;
     }
 }
 /**
  * Headings
  */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: 300;
 }
 /**
@@ -71,11 +104,13 @@ h1, h2, h3, h4, h5, h6 {
  */
 a {
     text-decoration: none;
+
     &:visited {
-      color: slategrey;
+        color: slategrey;
     }
+
     &:hover {
-      cursor: pointer;
+        cursor: pointer;
     }
 }
 /**
@@ -96,16 +131,18 @@ blockquote {
 /**
  * Code formatting
  */
-pre,
-code {
+code,
+pre {
     font-size: 15px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #eef;
 }
+
 code {
     padding: 1px 5px;
 }
+
 pre {
     padding: 8px 12px;
     overflow-x: scroll;
@@ -121,16 +158,15 @@ pre {
  */
 .wrapper {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+    max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
     @extend %clearfix;
-
     @include media-query($on-laptop) {
         max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+        max-width: calc(#{$content-width} - (#{$spacing-unit}));
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
@@ -139,7 +175,6 @@ pre {
  * Clearfix
  */
 %clearfix {
-
     &:after {
         content: "";
         display: table;
@@ -150,7 +185,6 @@ pre {
  * Icons
  */
 .icon {
-
     > svg {
         display: inline-block;
         width: 16px;
