--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -26,7 +26,9 @@ div.project{
   -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
-
+  a {
+    color: slategrey;
+  }
 }
 
 div.image_wrapper {
