--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -91,7 +91,7 @@
  * Site footer
  */
 .site-footer {
-  height: 75px;
+  height: 10vh;
   padding: $spacing-unit 0;
   background-color: #333232;
   background-image: url('/images/black-texture-bg.svg');
@@ -168,12 +168,12 @@
 body > div.page-wrapper{
   min-height: 100%;
   /* equal to footer height */
-  margin-bottom: -75px;
+  margin-bottom: -10vh;
 }
 body > div.page-wrapper:after{
   content: "";
   display: block;
-  height: 75px;
+  height: 10vh;
 }
 
 
